[project]
name = "try-plyer"
version = "0.1.0"
description = "Plyer library practice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plyer",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff",
]
linux = [
    "dbus-python; sys_platform=='linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
