[project]
name = "try-ray"
version = "0.1.0"
description = "Ray distributed computing practice"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ray[default]",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
)/
'''

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
