[project]
name = "try-torch"
version = "0.1.0"
description = "PyTorch learning practice"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy", 
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example"]

[tool.black]
line-length = 79
target-version = ['py39']

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
