[project]
name = "try-torch"
version = "0.1.0"
description = "PyTorch learning practice"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy", 
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example"]


[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
